fixed sizing of news post image on mobile

--- a/Dissertation/wwwroot/css/site.css
+++ b/Dissertation/wwwroot/css/site.css
@@ -567,3 +567,7 @@ html {
 .map-frame{
     aspect-ratio:2/1;
 }
+
+.article-row md-block img{
+    max-width:100%;
+}
